# hyprgraphics

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: arch.yml  nix.yml
include/hyprgraphics/color/: Color.hpp
include/hyprgraphics/image/: Image.hpp
include/hyprgraphics/image/utils/: ImageValidator.hpp
nix/: default.nix
src/color/: Color.cpp
src/image/: Image.cpp
src/image/formats/: Bmp.cpp  Jpeg.cpp  JpegXL.cpp  Png.cpp  Png.hpp  Webp.cpp
src/image/utils/: ImageValidator.cpp
tests/: image.cpp
